# common-cpp

./: .clang-format  .clang-tidy  .codacy.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  NOTICE  README.md  common-cpp.sln  vcpkg-configuration.json  vcpkg.json
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  msvc-analysis.yml
cmake/: EventLog.cmake  common-cpp-config.cmake.in  m3c-config.cmake.in  merge-events.vbs  process-events.cmake
include/m3c/: COM.h  ClassFactory.h  ComObject.h  Handle.h  Log.h  LogArgs.h  LogData.h  PropVariant.h  com_heap_ptr.h  com_ptr.h  exception.h  finally.h  format.h  lazy_string.h  mutex.h  rpc_string.h  source_location.h  string_encode.h  type_traits.h  unique_ptr.h
m3c/include/m3c/: COM.h  ClassFactory.h  ComObject.h  Handle.h  PropVariant.h  com_heap_ptr.h  com_ptr.h  exception.h  finally.h  handle.h  lazy_string.h  mutex.h  rpc_string.h  string_encode.h  types_fmt.h  types_log.h  unique_ptr.h
m3c/msvc/: m3c.props
m3c/msvc/m3c/: m3c.vcxproj  m3c.vcxproj.filters  stdafx.cpp  stdafx.h
m3c/msvc/m3c_Test/: m3c_Test.vcxproj  m3c_Test.vcxproj.filters  stdafx.cpp  stdafx.h  types_log_Test.cpp
m3c/src/: ClassFactory.cpp  ComObject.cpp  Handle.cpp  PropVariant.cpp  com_heap_ptr.cpp  com_ptr.cpp  exception.cpp  handle.cpp  lazy_string.cpp  mutex.cpp  rpc_string.cpp  string_encode.cpp  types_fmt.cpp  types_log.cpp  unique_ptr.cpp
m3c/test/: Bar.cpp  Bar.h  ClassFactory_Test.cpp  ComObject_Test.cpp  Foo.cpp  Foo.h  PropVariant_Test.cpp  com_heap_ptr_Test.cpp  com_ptr_Test.cpp  exception_Test.cpp  finally_Test.cpp  lazy_string_Test.cpp  main.cpp  rpc_string_Test.cpp  types_fmt_Test.cpp  types_log_Test.cpp  unique_ptr_Test.cpp
m4t/include/m4t/: IStream_Mock.h  MallocSpy.h  m4t.h  memory.h
m4t/msvc/: m4t.props
m4t/msvc/m4t/: m4t.vcxproj  m4t.vcxproj.filters  stdafx.cpp  stdafx.h
m4t/src/: IStream_Mock.cpp  MallocSpy.cpp  memory.cpp
src/: CMakeLists.txt  COM.cpp  ClassFactory.cpp  ComObject.cpp  Handle.cpp  Log-config.cpp  Log.cpp  LogArgs.cpp  LogData.cpp  PropVariant.cpp  buffer_management.cpp  buffer_management.h  com_heap_ptr.cpp  com_ptr.cpp  exception.cpp  format.cpp  lazy_string.cpp  m3c.events.man  m3c_events.man  mutex.cpp  pch.h  rpc_string.cpp  string_encode.cpp  type_traits.cpp  unique_ptr.cpp
test/: .clang-tidy  Bar.cpp  CMakeLists.txt  ClassFactory.test.cpp  ClassFactory_Test.cpp  ComObject.test.cpp  ComObject_Test.cpp  ComObjects.cpp  ComObjects.h  Foo.cpp  Handle.test.cpp  Handle_Test.cpp  Log.test.cpp  LogData.test.cpp  LogData_Test.cpp  Log_Test.cpp  PropVariant.test.cpp  PropVariant_Test.cpp  com_heap_ptr.test.cpp  com_heap_ptr_Test.cpp  com_ptr.test.cpp  com_ptr_Test.cpp  exception.test.cpp  exception_Test.cpp  finally.test.cpp  finally_Test.cpp  format.test.cpp  format_Test.cpp  lazy_string.test.cpp  main.cpp  mutex.test.cpp  mutex_Test.cpp  pch.h  pch_Log.h  rpc_string.test.cpp  rpc_string_Test.cpp  source_location_Test.cpp  string_encode.test.cpp  string_encode_Test.cpp  test.events.man  (+5 more)
